# snorkel-backend

./: .cursorrules  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-ignore  AUTOFIX_GUIDE.md  GEOGRAPHIC_HIERARCHY_MIGRATION.md  GEOGRAPHIC_PERFORMANCE_OPTIMIZATION.md  LINTING_GUIDE.md  Makefile  Procfile  README.md  RESTRUCTURING_GUIDE.md  TESTING_GUIDE.md  debug_env.py  debug_flask_run.py  newrelic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py
.github/workflows/: lint.yml  test.yml
app/: __init__.py  config.py  example.sql  extensions.py  models.py  models.py.backup
app/api/: __init__.py  auth.py  health.py
app/helpers/: __init__.py  create_account.py  demicrosoft.py  email_scheduler.py  get_limit.py  get_localities.py  get_nearby_spots.py  login.py  merge_area_one.py  parse_uddf.py  phone_validation.py  send_notifications.py  typeahead_from_spot.py  validate_email_format.py  wally_integration.py
app/models/: README.md  __init__.py  base.py  dive.py  external.py  geographic.py  shop.py  system.py  user.py
app/routes/: buddy.py  dive_shop.py  geography.py  loc.py  locality.py  maps.py  password.py  review.py  reviews.py  search.py  shop.py  spot.py  spots.py  user.py  users.py
app/scripts/: openapi.py
app/services/: auth_service.py  url_mapping.py
app/templates/: recent_reviews_email.html
app/utils/: validators.py
instance/: test.db
migrations/versions/: 00408ec985fc_.py  004888b112c6_add_is_deleted_field_to_spots.py  00c0ff6fd3f2_.py  02406a792cf4_make_locality_name_non_nullable.py  075b85d528dc_add_description_field_for_locations.py  085900189cdb_add_title_field_for_reviews.py  0b40974880fd_.py  0c27a42b2939_add_email_and_phone_to_diveshops.py  0e14e62319eb_InitialMigration.py  117a5853246d_add_to_diveshop_model.py  12f20b2d5438_add_shortname_to_area_two.py  13608966fe61_add_locality_tables.py  1e4470aa1adf_adddiveshoptable.py  20e53de3f32e_add_shortname_for_tag_urls.py  27b65909b8ae_add_extra_review_fields.py  291f697af09e_add_hours_and_description_to_shop.py  2a8fb0a6f2fe_add_json_for_padi_data_dump.py  2c66e1a24dd0_add_google_name_for_areaone.py  2f4db5864a2d_adduserlatlng.py  2fbc56c38d88_change_name_from_url_to_website.py  32a2a71c845c_add_google_name_to_area2_to_separate_.py  33ffc1e47e42_add_created_and_updated_columns_for_.py  3b0f8dc881cf_.py  44d4df0fe283_add_name_to_dive_shop.py  4561393dfdd5_make_shorediving_id_unique.py  457a89541c62_add_stamp_uri_to_dive_shop.py  476c647dab9e_separate_hero_img_vs_logo_img_for_dive_.py  48057053d1ac_add_max_depth_field_to_reviews.py  4dc8f65f694c_.py  5274015c42ef_add_geo_node_indexes.py  (+54 more)
scripts/: analyze_duplicates.py  autofix_lint.py  clean_orphaned_legacy_data.py  find_and_drop_constraints.py  merge_duplicates.py  migrate_geographic_hierarchy_fast.py  migrate_spots_to_geographic_nodes.py  rollback_merge.py  setup.py  setup_linting.py  test_confidence_score_consistency.py  test_full_migration.py  test_geographic_migration.py  test_geographic_performance.py  test_hierarchical_paths.py  test_merge_duplicates.py
test_data/: Dive_2021-09-20-1145.xml
tests/: __init__.py  conftest.py  test_models.py
